[gd_scene load_steps=17 format=3 uid="uid://brdlcvxvpc7om"]

[ext_resource type="Script" path="res://Scenes/settings.gd" id="1_hcfm4"]
[ext_resource type="PackedScene" uid="uid://dq7ayqhtdmkh7" path="res://Scenes/background_space.tscn" id="2_uu38h"]
[ext_resource type="FontFile" uid="uid://x474cgkwo2ij" path="res://Assets/Fonts/Matemasie-Regular.ttf" id="3_tcqbv"]
[ext_resource type="Script" path="res://Scenes/label_4.gd" id="4_6aq8q"]
[ext_resource type="AudioStream" uid="uid://ccde62p3r7oil" path="res://Assets/Music/deep_sea.mp3" id="4_57f3h"]

[sub_resource type="Animation" id="Animation_y6tmo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.359999, 0.359999)]
}

[sub_resource type="Animation" id="Animation_jdknx"]
resource_name = "bg moving"
length = 60.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 30, 60),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.35, 0.35), Vector2(1, 1), Vector2(0.35, 0.35)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7g6kh"]
_data = {
"RESET": SubResource("Animation_y6tmo"),
"bg moving": SubResource("Animation_jdknx")
}

[sub_resource type="Theme" id="Theme_ul6sw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_x0vos"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m7204"]
bg_color = Color(0, 0, 0, 0.439216)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q3ytc"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="CanvasTexture" id="CanvasTexture_ais6n"]
specular_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_ll0wi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(929, -598)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_sqfs1"]
resource_name = "transition"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(929, 541), Vector2(929, -598)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rs2ko"]
_data = {
"RESET": SubResource("Animation_ll0wi"),
"transition": SubResource("Animation_sqfs1")
}

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hcfm4")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Background_space" parent="CanvasLayer" instance=ExtResource("2_uu38h")]
position = Vector2(951, 514)
scale = Vector2(0.359999, 0.359999)

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Background_space"]
libraries = {
"": SubResource("AnimationLibrary_7g6kh")
}

[node name="Back" type="Button" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -97.0
offset_right = 184.0
grow_vertical = 0
pivot_offset = Vector2(1, 69)
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.86
theme = SubResource("Theme_ul6sw")
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
theme_override_fonts/font = ExtResource("3_tcqbv")
theme_override_font_sizes/font_size = 48
theme_override_styles/focus = SubResource("StyleBoxEmpty_x0vos")
theme_override_styles/pressed = SubResource("StyleBoxFlat_m7204")
theme_override_styles/normal = SubResource("StyleBoxFlat_q3ytc")
text = "Back"
flat = true

[node name="Credits" type="Button" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -258.0
offset_top = -107.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.86
theme = SubResource("Theme_ul6sw")
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
theme_override_fonts/font = ExtResource("3_tcqbv")
theme_override_font_sizes/font_size = 48
theme_override_styles/focus = SubResource("StyleBoxEmpty_x0vos")
theme_override_styles/pressed = SubResource("StyleBoxFlat_m7204")
theme_override_styles/normal = SubResource("StyleBoxFlat_q3ytc")
text = "Credits"
flat = true

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_tcqbv")
theme_override_font_sizes/font_size = 64
text = "MUSIC AND SFX"

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label4" type="Label" parent="CanvasLayer/HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("3_tcqbv")
theme_override_font_sizes/font_size = 26
text = "Music:"

[node name="HSlider" type="HSlider" parent="CanvasLayer/HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.1
value = 0.5

[node name="HBoxContainer3" type="HBoxContainer" parent="CanvasLayer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label4" type="Label" parent="CanvasLayer/HBoxContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("3_tcqbv")
theme_override_font_sizes/font_size = 26
text = "    SFX:"

[node name="HSlider2" type="HSlider" parent="CanvasLayer/HBoxContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.1
value = 0.5

[node name="Label3" type="Label" parent="CanvasLayer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_tcqbv")
theme_override_font_sizes/font_size = 64

[node name="Label2" type="Label" parent="CanvasLayer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_tcqbv")
theme_override_font_sizes/font_size = 64
text = "RESOLUTIONS"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Change" type="Button" parent="CanvasLayer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.86
theme = SubResource("Theme_ul6sw")
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
theme_override_fonts/font = ExtResource("3_tcqbv")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_x0vos")
theme_override_styles/pressed = SubResource("StyleBoxFlat_m7204")
theme_override_styles/normal = SubResource("StyleBoxFlat_q3ytc")
text = "CHANGE"
flat = true

[node name="Label4" type="Label" parent="CanvasLayer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_tcqbv")
theme_override_font_sizes/font_size = 26
text = "1920x1080"
horizontal_alignment = 1
script = ExtResource("4_6aq8q")

[node name="HBoxContainer4" type="HBoxContainer" parent="CanvasLayer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Change" type="Button" parent="CanvasLayer/HBoxContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.86
theme = SubResource("Theme_ul6sw")
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
theme_override_fonts/font = ExtResource("3_tcqbv")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_x0vos")
theme_override_styles/pressed = SubResource("StyleBoxFlat_m7204")
theme_override_styles/normal = SubResource("StyleBoxFlat_q3ytc")
text = "CHANGE"
flat = true

[node name="Label4" type="Label" parent="CanvasLayer/HBoxContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_tcqbv")
theme_override_font_sizes/font_size = 26
text = "fullscreen"
horizontal_alignment = 1

[node name="SAVE" type="Button" parent="CanvasLayer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.86
theme = SubResource("Theme_ul6sw")
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
theme_override_fonts/font = ExtResource("3_tcqbv")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_x0vos")
theme_override_styles/pressed = SubResource("StyleBoxFlat_m7204")
theme_override_styles/normal = SubResource("StyleBoxFlat_q3ytc")
text = "SAVE"
flat = true

[node name="VBoxContainer3" type="VBoxContainer" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_tcqbv")
theme_override_font_sizes/font_size = 64
text = "                 "

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_tcqbv")
theme_override_font_sizes/font_size = 64
text = "CONTROLS"

[node name="Label2" type="Label" parent="CanvasLayer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_tcqbv")
theme_override_font_sizes/font_size = 26
text = "\"SPACE\" or \"ESC\" - to pause/unpause game"

[node name="Transition" type="Sprite2D" parent="CanvasLayer"]
modulate = Color(0, 0, 0, 1)
top_level = true
position = Vector2(929, -598)
scale = Vector2(2163, 1151)
texture = SubResource("CanvasTexture_ais6n")

[node name="Transition" type="AnimationPlayer" parent="CanvasLayer/Transition"]
libraries = {
"": SubResource("AnimationLibrary_rs2ko")
}

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_57f3h")
autoplay = true
parameters/looping = true

[connection signal="pressed" from="CanvasLayer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="CanvasLayer/Credits" to="." method="_on_credits_pressed"]
[connection signal="value_changed" from="CanvasLayer/HBoxContainer/VBoxContainer/HBoxContainer2/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/HBoxContainer/VBoxContainer/HBoxContainer3/HSlider2" to="." method="_on_h_slider_2_value_changed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/VBoxContainer/HBoxContainer/Change" to="CanvasLayer/HBoxContainer/VBoxContainer/HBoxContainer/Label4" method="_on_change_pressed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/VBoxContainer/SAVE" to="." method="_on_save_pressed"]
[connection signal="animation_finished" from="CanvasLayer/Transition/Transition" to="." method="_on_transition_animation_finished"]
